Ensure applet spacing is sensible in a vertical panel

--- a/ChromeOS/files/Chrome OS/cinnamon/cinnamon.css
+++ b/ChromeOS/files/Chrome OS/cinnamon/cinnamon.css
@@ -1503,6 +1503,12 @@ StScrollBar StButton#hhandle {
     color: white;
     transition-duration: 50;
 }
+.applet-box.vertical {
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
 .applet-box:hover {
     border-image: url('hover-box.png') 4 4 4 4;
 }
